# x402-norway-ip

./: .gitignore  Dockerfile  MARKETING_SITE_INTEGRATION.md  README.md  cache.py  cdp_auth.py  fly.toml  main.py  nice_classes.py  parsers.py  patentstyret_client.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
static/: index.html
tests/: conftest.py  test_endpoints.py  test_parsers.py  test_skeleton.py
