[project]
name = "x402-agent-template"
version = "0.1.0"
description = "x402 micropayment agent — replace this description"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "x402[fastapi,evm]>=2.8,<2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
